--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 <head>
 	<title> საქართველოს სახელმწიფო ნაკრძალები </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <!-- 	<style type="text/css">
 
 		#rcorners1 {
