--- a/reserve6-hotels.html
+++ b/reserve6-hotels.html
@@ -6,6 +6,8 @@
 
 <head>
 	<title> თუშეთის დაცული ტერიტორიები </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<link rel="stylesheet" type="text/css" href="reset.css">
 
 	<link rel="stylesheet" type="text/css" href="style.css">
