--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 		}
 	</style> -->
 	<link rel="stylesheet" type="text/css" href="reset.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
+<!-- 	<link rel="stylesheet" type="text/css" href="style.css">
+ --></head>
 
 
 <body>
