--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <head>
 	<title> საქართველოს სახელმწიფო ნაკრძალები </title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<!-- 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+ -->
 <!-- 	<style type="text/css">
 
 		#rcorners1 {
@@ -36,8 +36,8 @@
 		}
 	</style> -->
 	<link rel="stylesheet" type="text/css" href="reset.css">
-<!-- 	<link rel="stylesheet" type="text/css" href="style.css">
- --></head>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
 
 <body>
