--- a/reserve1-2.html
+++ b/reserve1-2.html
@@ -6,8 +6,8 @@
 
 <head>
 	<title> ბაწარა-ბაბანეურის დაცული ტერიტორიები </title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<!-- 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+ -->
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<style type="text/css">
