--- a/reserve4-sightseeing.html
+++ b/reserve4-sightseeing.html
@@ -6,7 +6,7 @@
 
 <head>
 	<title> ბორჯომ-ხარაგაულის ეროვნული პარკი </title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 
